# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-logging-context"
version = "0.1.0"
description = "A Python util for automatically adding extra log fields to logs"
readme = "README.md"
authors = [{ name = "Dean Gurvitz", email = "deansg@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/deansg/py-logging-context"
